; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_d3d8.c_d3d8_video_texture_load_wrap_d3d.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_d3d8.c_d3d8_video_texture_load_wrap_d3d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3d8_texture_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @d3d8_video_texture_load_wrap_d3d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d3d8_video_texture_load_wrap_d3d(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.d3d8_texture_info*, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.d3d8_texture_info*
  store %struct.d3d8_texture_info* %7, %struct.d3d8_texture_info** %5, align 8
  %8 = load %struct.d3d8_texture_info*, %struct.d3d8_texture_info** %5, align 8
  %9 = icmp ne %struct.d3d8_texture_info* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load %struct.d3d8_texture_info*, %struct.d3d8_texture_info** %5, align 8
  %13 = call i32 @d3d8_video_texture_load_d3d(%struct.d3d8_texture_info* %12, i64* %4)
  %14 = load i64, i64* %4, align 8
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %11, %10
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @d3d8_video_texture_load_d3d(%struct.d3d8_texture_info*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
